--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       padding:40px;
     
     ">
-      <img src='https://kangwenchang.com/logo.png' alt="ssy" width="80px" height="80px">
+      <img src="ss.jpg" alt="ssy" width="80px" height="80px">
     </div>
     <div style="
       max-width: 700px;
