--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>yyo hahaha</title>
+    <title>鱼yyo hahaha</title>
     <style>  
       body {
         margin: 0;
