--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
     
     
     ">
-      <p>ggdsvhvbdcghvcvvjcdhgvdgv</p>
-      <p>ggdsvhvbdcghvcvvjcdhgvdgv</p>
+      <p>没事你是个明白人我明白你明白的意思我也是明白人明白人就应该明白我明白你明白的意思只要大家都明白人应明白我明白你明白的意思这样网络环境就是充满明白人明白其他明白人所明白的事</p>
+      <p>你说的很对，可是老干妈的酸辣并不能为广东肠粉提鲜，反而黄焖鸡米饭更让我感觉吃得放心;而实际上俄罗斯的优势在于地广人稀，那么我觉得穿西装的话，还是打领带比较得体一些。
+        我觉得这个观点有点偏激了，首先外星人是紫色的，而且派大星和海绵宝宝一起去抓水母了。当然，太阳从东边升起的时候，也代表她会从西边落下。依古比古的毯子好像是红色的，就算小头爸爸不是大耳朵图图的亲生父亲，我还是认为肖战不应该偷猪猪侠的超级棒棒糖。</p>
       <p>ggdsvhvbdcghvcvvjcdhgvdgv</p>
 
 
